dot_local/share/user-content.css
a.result__a, div.result__extras, div.result__snippet, /* DuckDuckGo */
body.env-production.page-responsive, body.env-production.page-responsive *, /* GitHub */
body.gl-platform-linux, body.gl-platform-linux *, /* GitLab */
body.mono-as-fuck /* Slay all other other serif devils. */
{
    font-family: "JetBrains Mono" !important;
}

body.gl-platform-linux, body.env-production.page-responsive {
    div.js-pipeline-graph .gl-text-truncate {
        overflow: unset !important;
        text-overflow: none !important;
        white-space: normal !important;
        font-size: 0.6em;
    }
    div.sidebar-container .gl-text-truncate {
        overflow: unset !important;
        text-overflow: unset !important;
        white-space: normal !important;
    }

    body,
    div.message-in,
    div.message-out,
    td.comment-body,
    ul.notes li.note,
    .ql-editor {
        font-family: "JetBrains Mono" !important;
    }

    .board-card.gl-rounded-base {
        border-radius: 1.0rem !important;
    }

    .board-card {
        box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.1) !important;
    }

    .board-card.is-active {
        box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.1)  ;
    }

    code.job-log {
        border-radius: 0px 0px 13px 13px !important;
    }

    .js-pipeline-graph .build-content {
        border-radius: 0.35rem !important;
    }

    .js-pipeline-graph .gl.js-pipeline-job-width {
        width: 230px !important;
    }
    /*
    .js-pipeline-graph .ci-job-component {
        width: 240px !important;
    }

    .js-pipeline-graph .ci-job-name-component {
        width: 240px !important;
    }
    */

    .js-pipeline-graph div[data-testid="stage-column"] {
        padding-left: 0.5rem;
        padding-right:0.5rem;
    }

    .js-pipeline-graph .gl-ci-action-icon-container {
      border-radius: 15% !important;
    }

    .js-pipeline-graph .ci-job-component .js-pipeline-graph-job-link {
      border-radius: 8px !important;
    }

    .gl-label {
        border-radius: 0.35rem !important;
    }

    .c-timestamp__label {
        font-size: 0.8em;
    }

    .fa {
        font: "normal normal normal 14px/1 FontAwesome";
    }

    .ci-status-icon-failed-with-warnings svg,
    .ci-status-icon-success-with-warnings svg {
        fill: crimson !important;
    }

    .dropdown-menu li[data-milestone-id^="Ops Team Sprint"] {
      background-color: blanchedalmond !important;
      font-weight: bold !important;
    }
    .dropdown-menu li[data-milestone-id="Ops Team Backlog"] {
      background-color: palegoldenrod !important;
      font-weight: bold !important;
    }
    .dropdown-menu li[data-milestone-id^="Ops Team Sprint"]:hover,
    .dropdown-menu li[data-milestone-id^="Ops Team Sprint"]:hover * {
      background-color: blanchedalmond !important;
    }
    .dropdown-menu li[data-milestone-id="Ops Team Backlog"]:hover,
    .dropdown-menu li[data-milestone-id="Ops Team Backlog"]:hover * {
      background-color: palegoldenrod !important;
    }

    .gl-label-text-light {
        border-radius: 0.35rem
    }

    .js-pipeline-graph .build {
        width: auto;
    }

    .js-pipeline-graph .gl-text-truncate {
        overflow: visible;
    }

    .js-pipeline-graph .build .build-content {
        border-radius: 10px;
    }

    .js-pipeline-graph div.ci-job-component[id*="production"] .menu-item {
        box-shadow: 0px 0px 5px #f00606;
    }

    .js-pipeline-graph div.ci-job-component[id*="staging"] .menu-item {
        box-shadow: 0px 0px 5px #f09a06;
    }

    li.timeline-entry {
        font-size: 0.8em !important;
        padding-top: 0;
        padding-bottom: 0;
    }
}

